--- a/css/bootstrap.less
+++ b/css/bootstrap.less
@@ -10,7 +10,7 @@
 
 // Reset and dependencies
 @import "normalize.less";//reset
-//@import "print.less";//打印
+@import "print.less";//打印
 @import "glyphicons.less";//字体
 
 // Core CSS
@@ -18,7 +18,7 @@
 @import "type.less";
 //@import "code.less";
 @import "grid.less";//栅格
-//@import "tables.less";//表格
+@import "tables.less";//表格
 @import "forms.less";//表单
 @import "buttons.less";//按钮
 
@@ -31,7 +31,7 @@
 @import "navbar.less";//导航条
 @import "breadcrumbs.less";//面包屑导航
 @import "pagination.less";//分页条
-//@import "pager.less";//分页器
+@import "pager.less";//分页器
 @import "labels.less";//标签
 @import "badges.less";//徽章
 @import "jumbotron.less";//巨幕
