--- a/css/navs.less
+++ b/css/navs.less
@@ -23,6 +23,7 @@
       &:hover,
       &:focus {
         text-decoration: none;
+        color: #fff;
         background-color: @nav-link-hover-bg;
       }
     }
