--- a/css/tust.less
+++ b/css/tust.less
@@ -9,6 +9,11 @@
 @media screen and (min-width: 768px){
   .navbar-collapse > .nav >li {
     width:10%;
+    -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s ;
+    -ms-transition: all 0.5s ;
+    -o-transition: all 0.5s ;
+    transition: all 0.5s ;
   }
   .logo {
      margin:15px 0;
@@ -152,7 +157,7 @@ header {
 
 .navFixed{
   position: fixed;
-  top: 100px;
+  top: 139px;
 }
 
 
