--- a/css/variables.less
+++ b/css/variables.less
@@ -427,7 +427,7 @@
 
 //=== Shared nav styles
 @nav-link-padding:                          10px 15px;
-@nav-link-hover-bg:                         @gray-lighter;
+@nav-link-hover-bg:                         @brand-info;//@gray-lighter;
 
 @nav-disabled-link-color:                   @gray-light;
 @nav-disabled-link-hover-color:             @gray-light;
@@ -446,7 +446,7 @@
 
 //== Pills
 @nav-pills-border-radius:                   @border-radius-base;
-@nav-pills-active-link-hover-bg:            @component-active-bg;
+@nav-pills-active-link-hover-bg:            @brand-danger;//@component-active-bg;
 @nav-pills-active-link-hover-color:         @component-active-color;
 
 
@@ -495,8 +495,8 @@
 @jumbotron-color:                inherit;
 @jumbotron-bg:                   @gray-lighter;
 @jumbotron-heading-color:        inherit;
-@jumbotron-font-size:            ceil((@font-size-base * 1.5));
-@jumbotron-heading-font-size:    ceil((@font-size-base * 4.5));
+@jumbotron-font-size:            ceil((@font-size-base * 1));
+@jumbotron-heading-font-size:    ceil((@font-size-base * 3));
 
 
 //== Form states and alerts
